--- a/_layouts/default-cn.html
+++ b/_layouts/default-cn.html
@@ -72,10 +72,11 @@
                     </div>
 
                     <ul class="navigation_ul">
-                        <li class="navigation_i __link-to-main"><a href="{{ site.en-baseurl }}">主要</a></li>
-                        <li class="navigation_i helpers_go-to-content"><a href="#content">调到内容</a></li>
+                        <li class="navigation_i __link-to-main"><a href="{{ site.cn-baseurl }}">主要内容</a></li>
+                        <li class="navigation_i helpers_go-to-content"><a href="#content">跳到内容</a></li>
                         <li class="navigation_i"><a href="{{ site.cn-project-descr-url }}"> 关于本项目 </a></li>
                         <li class="navigation_i"><a href="{{ site.baseurl }}/ja">日文翻译</a></li>
+                        <li class="navigation_i"><a href="{{ site.baseurl }}/en">英文翻译</a></li>
                     </ul>
 
                     <div class="navigation_t">
